--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,16 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<form class="" action="/landmarks/<%=@landmark.id%>" method="post">
+  <input type="hidden" name="_method" value="patch">
 
-<a class="button" href="/figures">Landmarks</a>
+  <input id="name" type="text" name="landmark[name]" value="<%= @landmark.name%>">
+
+  <input id="year_completed" type="text" name="landmark[year_completed]" value="<%= @landmark.year_completed.to_s %>">
+
+  <button type="submit">Edit Landmark</button>
+</form>
+<br>
+
+<a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
