--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,17 @@
 <h2>Create New Landmark</h2>
 
 <!-- add content here -->
+<form action="/landmarks" method="post">
+<label>Landmark Name:</label>
+<input id="landmark_name" type="text" name="landmark[name]" value="">
+<br>
+<label>Landmark Year:</label>
+<input id="landmark_year_completed" type="text" name="landmark[year_completed]" value="">
+<br>
+<button type="submit">Create New Landmark</button>
+</form>
+
+
 
 <a class="button" href="/figures">Landmarks</a>
 <a class="button" href="/">Home</a>
