--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -1,6 +1,11 @@
 <h2>All Historical Figures</h2>
 
-<!-- add content here -->
+<ul>
+  <%@figures.each do |figure|%>
+  <li><%=figure.name%></li>
+  <%end%>
+</ul>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
+<a class="button" href="/figures/new">New Figure</a>
